Fix alignment issues and breaking in PCTP PDF

--- a/app/assets/stylesheets/utilities/_display.scss
+++ b/app/assets/stylesheets/utilities/_display.scss
@@ -8,3 +8,7 @@
 {
   clear: left;
 }
+
+.inline {
+  display: inline !important;
+}
